--- a/templates/dashboard/dashpage.html
+++ b/templates/dashboard/dashpage.html
@@ -26,7 +26,7 @@
                             <td>{{ acesso.fornecedor }}</td>
                             <td>{{ acesso.login }}</td>
                             <td>{{ acesso.senha }}</td>
-                            <td>{{ acesso.atualizacao }}kW</td>
+                            <td>{{ acesso.atualizacao }}</td>
                             <td>
                                 <div>
                                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
